# HydraCore3

./: .gitignore  .gitmodules  CMakeLists.txt  CrossRT.h  EmbreeRT.cpp  LiteScene.cmake  README.md  VulkanRTX.cpp  VulkanRTX.h  bin_serialization.cpp  bin_serialization.h  build.sh  cmesh4.cpp  cmesh4.h  geometry.h  hydra_xml_materials.md  hydraxml.cpp  hydraxml.h  imageutils.cpp  imageutils.h  imageutils_gbuffer.cpp  integrator_gbuffer.cpp  integrator_pt.cpp  integrator_pt.h  integrator_pt1.cpp  integrator_pt1_generated.cpp  integrator_pt1_generated.h  integrator_pt1_generated_ds.cpp  integrator_pt1_generated_init.cpp  integrator_pt2.cpp  integrator_pt_cv.cpp  integrator_pt_f.cpp  integrator_pt_f_host.cpp  integrator_pt_f_mat.cpp  integrator_pt_generated.cpp  integrator_pt_generated.h  integrator_pt_generated_ds.cpp  integrator_pt_generated_init.cpp  integrator_pt_host.cpp  integrator_pt_kernels.cpp  (+55 more)
cam_plugin/: CamPinHole.cpp  CamPinHole.h  CamPinHole_pinhole_gpu.cpp  CamPinHole_pinhole_gpu.h  CamPinHole_pinhole_gpu_ds.cpp  CamPinHole_pinhole_gpu_init.cpp  CamPluginAPI.h  CamTableLens.cpp  CamTableLens.h  CamTableLens_tablelens_gpu.cpp  CamTableLens_tablelens_gpu.h  CamTableLens_tablelens_gpu_ds.cpp  CamTableLens_tablelens_gpu_init.cpp  README_cam.md  main_with_cam.cpp  main_with_cam_gpu.cpp
cam_plugin/include/: CamPinHole_generated_ubo.h  CamPinHole_pinhole_gpu_ubo.h  CamTableLens_tablelens_gpu_ubo.h
cam_plugin/shaders_pinhole_gpu/: build.sh  common_pinhole_gpu.h  kernel1D_ContribSample.comp  kernel1D_ContribSample.comp.spv  kernel1D_MakeEyeRay.comp  kernel1D_MakeEyeRay.comp.spv
cam_plugin/shaders_tablelens_gpu/: common_tablelens_gpu.h  kernel1D_ContribSample.comp  kernel1D_ContribSample.comp.spv  kernel1D_MakeEyeRay.comp  kernel1D_MakeEyeRay.comp.spv
cmake/: CompilerWarnings.cmake
diff_render/: adam.h  drmain.cpp  integrator_dr.cpp  integrator_dr.h  integrator_dr2.cpp
diff_render/tmp/: test35.cpp
fourier/: cmat_conductor.h  cmat_diffuse.h  cmat_film.h  fourier.cpp  fourier.h  fourier_fwd.h  fspec.h  levinson.h  vecn.h
hydra_api/: api_test.cpp  hydra_api.cpp  hydra_api.h  hydra_cpu.cpp  hydra_cpu.h
ies_parser/: IESNA.C
include/: Integrator_generated_ubo.h  airy_reflectance.h  cglobals.h  clight.h  cmat_conductor.h  cmat_conductor2.h  cmat_dielectric.h  cmat_diffuse.h  cmat_film.h  cmat_film_precomputed.h  cmat_film_runtime.h  cmat_glass.h  cmat_gltf.h  cmat_neural_brdf.h  cmat_neural_spec.h  cmat_plastic.h  cmaterial.h  transfer_matrix.h
include/LiteScene/: cmesh4.h  geometry.h  instances.h  light_source.h  material.h  mesh.h  scene.h  scene_2.h  sceneobj.h  sceneref.h  spectrum.h  texture.h
langevin_specific/: langevin_diary.md  log_test.cpp
lib/: CMakeLists.txt
lib/spectral/internal/math/: fourier.cpp
mlt/: integrator_kmlt.cpp  integrator_langevin.cpp  integrator_qmc.cpp  integrator_qmc.h  rnd_qmc.h
resources/: f_emission_lut.eflf
scenes/test_035/: statex_00001.xml
scenes/test_spectral/: spectral_cornell_conductor.xml  spectral_cornell_conductor_v2.xml
scn_mgr/: CMakeLists.txt
scripts/: slicer_build_shaders.sh  slicer_preprocess.sh  slicer_preprocess_framed_only.sh  slicer_preprocess_grid_only.sh  slicer_preprocess_hp_only.sh  slicer_preprocess_mesh_only.sh  slicer_preprocess_octree_only.sh  slicer_preprocess_sbs_only.sh  slicer_preprocess_svs_only.sh
shaders_generated/: CastSingleRayMega.comp  CastSingleRayMega.comp.spv  CastSingleRayRGEN.glsl  NaivePathTraceMega.comp  NaivePathTraceMega.comp.spv  PackXYMega.comp  PackXYMega.comp.spv  PathTraceFromInputRaysMega.comp  PathTraceFromInputRaysMega.comp.spv  PathTraceMega.comp  PathTraceMega.comp.spv  RayTraceMega.comp  RayTraceMega.comp.spv  build.sh  build_rt_pipeline.sh  common_generated.h
src/: CMakeLists.txt  cmesh4.cpp  format.h  geometry.cpp  loader.cpp  loader.h  loader_mat.cpp  loader_tex.cpp  mesh_load_obj.h  properties.cmake  scene.cpp  scene_2.cpp
testing/: perf.txt  run_bench.py  run_tests.py
tests/: neural_tests.cpp
